ec2Instance/ec2.tf
resource "aws_security_group" "apache-sg" {
  name        = "apache-sg"
  description = "Allow apache inbound traffic"
  vpc_id      = data.aws_vpc.myvpc.id

  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "apache-sg"
  }
}
resource "aws_instance" "apache" {
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.apache-sg.id]
  ami                    = data.aws_ami.myami.id
  subnet_id              = data.aws_subnets.subnets.ids[0]
}
